[gd_scene load_steps=11 format=3 uid="uid://4vkh4uhwbe4j"]

[ext_resource type="Script" path="res://Scripts/Panels/new_shelters.gd" id="1_81scs"]
[ext_resource type="Texture2D" uid="uid://bsp6dudeb6v7o" path="res://TMPTextures/0.png" id="1_ipdh4"]
[ext_resource type="Texture2D" uid="uid://boeui5psfp4ua" path="res://TMPTextures/0d.png" id="2_0wuj3"]
[ext_resource type="Script" path="res://Scripts/Panels/expand_shelters.gd" id="4_l2jqh"]
[ext_resource type="Texture2D" uid="uid://bp0am78v1hvvv" path="res://Textures/hammer_icon.png" id="4_wwqx8"]
[ext_resource type="Texture2D" uid="uid://f7vkhw3hy8tw" path="res://Textures/wrench.png" id="6_4ejqc"]

[sub_resource type="LabelSettings" id="LabelSettings_ppex6"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_m20j4"]

[sub_resource type="LabelSettings" id="LabelSettings_8axdp"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_7f1a0"]
font_size = 32

[node name="SheltersPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
color = Color(1, 0.607843, 0.713726, 0.392157)
polygon = PackedVector2Array(640, 0, 640, 576, 0, 576, 0, 0)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 91.0
text = "Schronienia"
label_settings = SubResource("LabelSettings_ppex6")
horizontal_alignment = 1

[node name="NewShelters" type="Control" parent="."]
anchors_preset = 0
offset_top = 96.0
offset_right = 640.0
offset_bottom = 320.0
script = ExtResource("1_81scs")

[node name="ProgressBar" type="ProgressBar" parent="NewShelters"]
layout_mode = 0
offset_left = 64.0
offset_top = 160.0
offset_right = 608.0
offset_bottom = 224.0
step = 0.1
show_percentage = false

[node name="BeginTextureButton" type="TextureButton" parent="NewShelters"]
layout_mode = 0
offset_left = 128.0
offset_top = 32.0
offset_right = 224.0
offset_bottom = 128.0
texture_normal = ExtResource("1_ipdh4")
texture_disabled = ExtResource("2_0wuj3")

[node name="Label" type="Label" parent="NewShelters/BeginTextureButton"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 96.0
text = "0/0"
label_settings = SubResource("LabelSettings_m20j4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressTextureButton" type="TextureButton" parent="NewShelters"]
layout_mode = 0
offset_left = 448.0
offset_top = 32.0
offset_right = 544.0
offset_bottom = 128.0
disabled = true
texture_normal = ExtResource("4_wwqx8")
texture_disabled = ExtResource("4_wwqx8")

[node name="SheltersLabel" type="Label" parent="NewShelters"]
layout_mode = 0
offset_left = 256.0
offset_top = 32.0
offset_right = 416.0
offset_bottom = 128.0
text = "0"
label_settings = SubResource("LabelSettings_8axdp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExpandShelters" type="Control" parent="."]
anchors_preset = 0
offset_top = 320.0
offset_right = 640.0
offset_bottom = 544.0
script = ExtResource("4_l2jqh")

[node name="ProgressBar" type="ProgressBar" parent="ExpandShelters"]
layout_mode = 0
offset_left = 64.0
offset_top = 160.0
offset_right = 608.0
offset_bottom = 224.0
step = 0.1
show_percentage = false

[node name="BeginTextureButton" type="TextureButton" parent="ExpandShelters"]
layout_mode = 0
offset_left = 128.0
offset_top = 32.0
offset_right = 224.0
offset_bottom = 128.0
texture_normal = ExtResource("1_ipdh4")
texture_disabled = ExtResource("2_0wuj3")

[node name="Label" type="Label" parent="ExpandShelters/BeginTextureButton"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 96.0
text = "0/0"
label_settings = SubResource("LabelSettings_m20j4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressTextureButton" type="TextureButton" parent="ExpandShelters"]
layout_mode = 0
offset_left = 448.0
offset_top = 32.0
offset_right = 544.0
offset_bottom = 128.0
disabled = true
texture_normal = ExtResource("6_4ejqc")
texture_disabled = ExtResource("6_4ejqc")

[node name="ExpansionsLabel" type="Label" parent="ExpandShelters"]
layout_mode = 0
offset_left = 256.0
offset_top = 32.0
offset_right = 416.0
offset_bottom = 128.0
text = "0"
label_settings = SubResource("LabelSettings_7f1a0")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="NewShelters/BeginTextureButton" to="NewShelters" method="_on_begin_texture_button_button_down"]
[connection signal="button_down" from="NewShelters/ProgressTextureButton" to="NewShelters" method="_on_progress_texture_button_button_down"]
[connection signal="button_down" from="ExpandShelters/BeginTextureButton" to="ExpandShelters" method="_on_begin_texture_button_button_down"]
[connection signal="button_down" from="ExpandShelters/ProgressTextureButton" to="ExpandShelters" method="_on_progress_texture_button_button_down"]
